iiCt/src/app/project-work/project-work.component.css
.vertical-spacing {
  display: inline-block;
  align-items: center;
}

.body-fonts {
  font-size: 1.5rem;
  font-weight: 300;
  width: 300px;
  margin-left: -5rem;
}

.title-fonts {
  /* font-size: 1.5rem;
  font-weight: 300;
  width: 300px; */
  margin-left: -5rem;
}

.right-image-png {
  width: 50%;
  margin-left: -10px;
  margin-right: -10px;
}

/* .right-text {
  margin-left: -69rem;
} */

.left-li-image {
  width: 12%;
  padding-top: 3rem;
  padding-left: 2rem;
  margin-right: -14rem;
}

.left-one {
  margin-right: -2rem;
}

.left-title {
  font-weight: bolder;
  font-size: 4rem;
}

hr {
  height: 10px;
  width: 400px;
  margin-left: -1.1rem;
  border-width: 10px;
  border-color: #545454;
  margin-top: 10px;
}

.move-down {
  margin-top: 190px;
}

